--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.11.0"
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.11.0",
+    "contentful": "^11.7.6"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
